    * cursor on raspberry pi is now hidden from the mainwindow.
    * cursor blanking has been removed from the about window.
    * if error happens during the rendering of time series, the spinner widget is now cleared.

  * FIXED:
    * fixed an issue with the option dictionary.
    * if threads are not launched at startup, it throws an error when exiting. It has been fixed.


### February 6 2021, Release version 0.9.0 ###

  * MODIFIED:
    * all threads have been modified to handle exception logging messages.
    * changed the functions to display data to keep in memory those data and share them with other windows.
    * scrollbar style has been removed from about and option windows as arrows weren't displayed properly at this time.
    * battery and signal icons are now clickable to allow displaying new windows.
    * figures in plot section were moved a bit to fix style issues.
    * MSL pressure is now displayed in the time series section.
    * major and minor ticks have been adjusted.

  * FIXED:
    * cursor wasn't blanked in both textbrowsers of the about window.
    * when clicking on time series button, the first index of the time series stack is now displayed.

  * ADDED:
    * a grid has been added to all graphs.
    * a window for signal quality and battery has been added
    * a window for pressure details has been added.
    * a window for temperature, humidity and dew point has been added.


### December 27 2021, Release version 0.8.2 ###

  * MODIFIED:
    * improved timestamp for data coming from mqtt server.

  * ADDED:
    * logging messages have been added for MqttToDbThread.


### December 26 2021, Release version 0.8.1 ###

  * FIXED:
    * logging wasn't imported in the gui_functions.py file.


### December 26 2021, Release version 0.8.0 ###

  * MODIFIED:
    * changed string format implying variables.
    * change matplotlib logging level to warning.
    * added a function to correct icon and font path for the compiled linux version.